# snake-clone

./: .clang-format  .gitignore  CMakeLists.txt  README.md  game.c  index.data  index.html  index.html.mem  index.js
cmake_modules/: FindSDL2_ttf.cmake
include/: framework.h  game.h
src/: app.c  framework.c  game.c  main.c
